# backend/src/routes/order.route.ts
@@ -24,14 +24,88 @@ router.get(
   checkRole(ROLES.SELLER),
   validateSchema(getOrdersSchema),
   /* #swagger.tags = ["Order"] */
+  /* #swagger.auto = false */
+  /* #swagger.security = [{ "bearerAuth": [] }]*/
+
+  /* #swagger.parameters["page"] = {
+      in: "query",
+      description: "Page number",
+      required: false,
+      type: "integer",
+      example: 1
+  } */
+
+  /* #swagger.parameters["limit"] = {
+      in: "query",
+      description: "Items per page",
+      required: false,
+      type: "integer",
+      example: 10
+  } */
+
+  /* #swagger.responses[200] = {
+      description: "OK"
+  } */
+
+  /* #swagger.responses[400] = {
+    description: "Bad Request"
+  } */
+
+  /* #swagger.responses[401] = {
+      description: "Unauthorized"
+  } */
+
+  /* #swagger.responses[403] = {
+    description: "Forbidden"
+  } */
   getSellerOrders,
 );
 
-router.get(
+router.post(
   "/myorders",
   authenticate,
   validateSchema(getOrdersSchema),
   /* #swagger.tags = ["Order"] */
+  /* #swagger.auto = false */
+  /* #swagger.security = [{ "bearerAuth": [] }]*/
+
+  /* #swagger.requestBody = {
+       description: "Your Orders",
+       required: false,
+       content: {
+         "application/json": {
+           schema: { $ref: "#/components/schemas/GetMyOrdersRequest" },
+         }
+       }
+    } */
+
+  /* #swagger.parameters["page"] = {
+      in: "query",
+      description: "Page number",
+      required: false,
+      type: "integer",
+      example: 1
+  } */
+
+  /* #swagger.parameters["limit"] = {
+      in: "query",
+      description: "Items per page",
+      required: false,
+      type: "integer",
+      example: 10
+  } */
+
+  /* #swagger.responses[200] = {
+      description: "OK"
+  } */
+
+  /* #swagger.responses[400] = {
+    description: "Bad Request"
+  } */
+
+  /* #swagger.responses[401] = {
+      description: "Unauthorized"
+  } */
   getOrders,
 );
 
@@ -40,6 +114,34 @@ router.post(
   authenticate,
   validateSchema(placeOrderSchema),
   /* #swagger.tags = ["Order"] */
+  /* #swagger.auto = false */
+  /* #swagger.security = [{ "bearerAuth": [] }]*/
+
+  /* #swagger.requestBody = {
+       description: "Place New Order",
+       required: true,
+       content: {
+         "application/json": {
+           schema: { $ref: "#/components/schemas/OrderPlaceRequest" },
+         }
+       }
+    } */
+
+  /* #swagger.responses[201] = {
+      description: "Created"
+  } */
+
+  /* #swagger.responses[400] = {
+    description: "Bad Request"
+  } */
+
+  /* #swagger.responses[404] = {
+      description: "Not Found"
+  } */
+
+  /* #swagger.responses[409] = {
+    description: "Forbidden"
+  } */
   placeOrder,
 );
 
@@ -49,6 +151,38 @@ router.patch(
   checkRole(ROLES.ADMIN),
   validateSchema(setOrderStatusSchema),
   /* #swagger.tags = ["Order"] */
+  /* #swagger.auto = false */
+  /* #swagger.security = [{ "bearerAuth": [] }]*/
+
+  /* #swagger.requestBody = {
+       description: "Change Order Status to Shipping",
+       required: true,
+       content: {
+         "application/json": {
+           schema: { $ref: "#/components/schemas/OrderStatusRequest" },
+         }
+       }
+    } */
+
+  /* #swagger.responses[201] = {
+      description: "Created"
+  } */
+
+  /* #swagger.responses[400] = {
+    description: "Bad Request"
+  } */
+
+  /* #swagger.responses[401] = {
+    description: "Unauthorized"
+  } */
+
+  /* #swagger.responses[404] = {
+      description: "Not Found"
+  } */
+
+  /* #swagger.responses[409] = {
+    description: "Forbidden"
+  } */
   setOrderStatus(OSTATUS.SHIPPING),
 );
 
@@ -58,6 +192,38 @@ router.patch(
   checkRole(ROLES.ADMIN),
   validateSchema(setOrderStatusSchema),
   /* #swagger.tags = ["Order"] */
+  /* #swagger.auto = false */
+  /* #swagger.security = [{ "bearerAuth": [] }]*/
+
+  /* #swagger.requestBody = {
+       description: "Change Order Status to Delivered",
+       required: true,
+       content: {
+         "application/json": {
+           schema: { $ref: "#/components/schemas/OrderStatusRequest" },
+         }
+       }
+    } */
+
+  /* #swagger.responses[201] = {
+      description: "Created"
+  } */
+
+  /* #swagger.responses[400] = {
+    description: "Bad Request"
+  } */
+
+  /* #swagger.responses[401] = {
+    description: "Unauthorized"
+  } */
+
+  /* #swagger.responses[404] = {
+      description: "Not Found"
+  } */
+
+  /* #swagger.responses[409] = {
+    description: "Forbidden"
+  } */
   setOrderStatus(OSTATUS.DELIVERED),
 );
 
@@ -66,6 +232,38 @@ router.patch(
   authenticate,
   validateSchema(setOrderStatusSchema),
   /* #swagger.tags = ["Order"] */
+  /* #swagger.auto = false */
+  /* #swagger.security = [{ "bearerAuth": [] }]*/
+
+  /* #swagger.requestBody = {
+       description: "Change Order Status to Cancelled",
+       required: true,
+       content: {
+         "application/json": {
+           schema: { $ref: "#/components/schemas/OrderStatusRequest" },
+         }
+       }
+    } */
+
+  /* #swagger.responses[201] = {
+      description: "Created"
+  } */
+
+  /* #swagger.responses[400] = {
+    description: "Bad Request"
+  } */
+
+  /* #swagger.responses[401] = {
+    description: "Unauthorized"
+  } */
+
+  /* #swagger.responses[404] = {
+      description: "Not Found"
+  } */
+
+  /* #swagger.responses[409] = {
+    description: "Forbidden"
+  } */
   setOrderStatus(OSTATUS.CANCELLED),
 );
 
